# scwoaservices_poetry

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: .gitignore  index.md  usage.md
scwoaservices/: decorators.py  errors.py  options.py  rules.py
scwoaservices/tools/: create_docu.py
tests/: test_scwoaservices.py
